--- a/static/CSS/topnav.css
+++ b/static/CSS/topnav.css
@@ -21,6 +21,7 @@
     width: 15%;
     height: 100%;
     margin-left: 20px;
+    margin-right: 15px;
   
 }
 
@@ -34,7 +35,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 15%;
+    width: 20%;
     height: 32px;
     border-radius: 4px;
     margin: 0 15px;
@@ -122,7 +123,7 @@
 .search-wrap {
     display: flex;
     height: 32px;
-    width: 20vw;
+    width: 100%;
 }
 
 
@@ -173,6 +174,7 @@
     height: 32px;
     width: 10%;
     border-right: 2px solid black;
+    padding: 0 10px;
 }
 
 .quick-link-icons {
@@ -189,6 +191,7 @@
     height: 32px;
     width: 5%;
     border-right: 2px solid black;
+    padding: 0 10px;
 }
 
 #nav-profile-wrapper {
