--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -293,6 +293,7 @@ p {
     border-top: 1px solid rgb(186, 184, 184);
     height: 35px;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .submit-btn {
@@ -304,6 +305,7 @@ p {
     padding: 0 15px;
     margin: 3px;
     font-weight: 700;
+    height: 30px;
 }
 
 .btn-img {
