--- a/static/CSS/maincontent.css
+++ b/static/CSS/maincontent.css
@@ -49,8 +49,8 @@
     width: 47px;
     margin-left: 10px;
     border-radius: 50%;
-
 }
+
 
 .sort-by-wrap {
     display: flex;
@@ -73,6 +73,18 @@
     border-radius: 20%;
     background-color: red;
     padding: 1px 5px;
+}
+
+.submit-btn-main {
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    padding: 0 15px;
+    margin: 3px;
+    font-weight: 700;
+    height: 50px;
 }
 
 .thumb-post-wrap {
@@ -217,4 +229,10 @@
     border: 1px solid rgb(139, 138, 138);
     background-color: rgb(84, 82, 81);
     border-radius: 4px;
+}
+
+
+
+.sidebar-wrap-m { 
+    display: none;
 }
