--- a/static/CSS/profile.css
+++ b/static/CSS/profile.css
@@ -42,6 +42,7 @@
 
 
 
+
 .cover-photo {
     width: 100%;
     height: 100px;
@@ -81,4 +82,14 @@
     width: 75px;
     border-radius: 50%;
     margin-top: -37.5px;
+}
+
+.avatar-form {
+    width: 100%;
+}
+.mid-sidebar-wrap {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    align-items: center;
 }
