--- a/templates/users/group.html
+++ b/templates/users/group.html
@@ -4,6 +4,24 @@
 {% block 'title' %}<title>Pipeline</title>{% endblock 'title' %}
 {% block 'content' %}
 
+<div class="sidebar-wrap-m">
+
+    <div class="top-sidebar-wrap">
+        <div class="cover-photo">
+        </div>
+        {% if group.avatar %}
+        <img src="{{group.avatar.url}}" alt="" srcset="" class='sidebar-avatar'>
+
+        {% else %}
+        <img src="{% static 'images/mario_mushroom.png' %}" alt="" srcset="" class='sidebar-avatar'>
+        {% endif %}
+
+        <h1 id="sidebar-username">p/{{group}}</h1>
+    </div>
+
+</div>
+
+
 <div class="main-wrap">
     <div class="content-wrap">
 
