--- a/static/CSS/create.css
+++ b/static/CSS/create.css
@@ -308,6 +308,8 @@ p {
     height: 30px;
 }
 
+
+
 .btn-img {
     height: 24px;
     width: 24px;
@@ -345,13 +347,29 @@ p {
 
 
 .community-rules-wrap {
-      visibility: visible;
-      opacity: 1;
-      width: 100%;
-      height: 100%;
+    display: flex;
+    flex-direction: column;
+    visibility: visible;
+    opacity: 1;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 10px;
+}
+
+.community-desc {
+    margin: 5px;
+}
+
+.community-members {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: fit-content;
+    margin: 5px;
 }
 
 .sidebar-rules {
+
     display: flex;
     flex-direction: column;
     border: 1px solid rgb(186, 184, 184);
@@ -359,6 +377,9 @@ p {
     width: 25vw;
     visibility: visible;
     opacity: 1;
+    font-size: 14px;
+    font-weight: 600;
+    margin-top: 10px;
 }
 
 
@@ -366,6 +387,7 @@ p {
     display: flex;
     border-bottom: 1px solid rgb(186, 184, 184);
     align-items: center;
+    justify-content: center;
 }
 
 #sidebar-groupimg {
@@ -380,6 +402,8 @@ p {
     font-size: 20px;
     font: 800;
 }
+
+
 
 .sidebar-li {
     border-bottom: 1px solid rgb(186, 184, 184);
