--- a/static/CSS/topnav.css
+++ b/static/CSS/topnav.css
@@ -194,6 +194,11 @@
     padding: 0 10px;
 }
 
+
+.login-create-wrap {
+    display: flex;
+    width: fit-content;
+}
 #nav-profile-wrapper {
     display: flex;
     flex-direction: column;
