--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -3,11 +3,19 @@
 {% extends 'base.html' %}
 {% block 'title' %}<title>Pipeline</title>{% endblock 'title' %}
 {% block 'content' %}
+<div class="sidebar-wrap-m">
+    <div class="top-sidebar-wrap">
 
-<form action="" method="POST">
-    {% csrf_token %}{{form}}
-    <input type="submit" value="Login" />
-</form>
+        <form action="" method="POST">
+            {% csrf_token %}
+            <h3>Username: <p>{{form.username}}</p>
+            </h3>
+            <h3>Password: <p>{{form.password}}</p>
+            </h3>
+            <input type="submit" value="Login" class='submit-btn' />
+        </form>
+    </div>
+</div>
 
 
 {% endblock 'content' %}
