--- a/static/CSS/topnav.css
+++ b/static/CSS/topnav.css
@@ -90,7 +90,7 @@
     display: flex;
     flex-direction: column;
     width: 20%;
-    height: 80%;
+    height:fit-content;
     position: absolute;
     background-color: rgb(84, 82, 81);
     border: 1px solid rgba(186, 184, 184, 0.757);
