--- a/templates/threads/thread.html
+++ b/templates/threads/thread.html
@@ -33,7 +33,8 @@
                         {% comment %} flex 2 columns {% endcomment %}
                         <div class="thumb-group-user-wrapper">
 
-                            <div class="thumb-content-avatar"><img src="{{read_thread.0.group.avatar.url}}" alt=""
+                            <div class="thumb-content-avatar"><img
+                                    src="{{read_thread.0.group.avatar.url|default:'images/mario_mushroom.png'}}" alt=""
                                     class="group_avatar"></div>
                             <div class="thumb-content-group"><a href="">p/{{read_thread.0.group}}
                                 </a> *</div>
